// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar 1`] = `
<DocumentFragment>
  <div
    class="command"
  >
    <div
      class="command-title"
    >
      Command Result
    </div>
    <div
      class="command-result"
    />
    <div
      class="argument-suggestion popover top"
    >
      <div
        class="arrow"
      />
      <div
        class="popover-content"
      >
        <div>
          <strong>
            Available Commands: 
          </strong>
          <p
            class="available-commands"
          >
            []
          </p>
        </div>
      </div>
    </div>
    <div
      class="command-input input-group"
    >
      <span
        class="input-group-addon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-terminal icon icon-terminal"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19h8"
          />
          <path
            d="m4 17 6-6-6-6"
          />
        </svg>
      </span>
      <input
        class="input"
        placeholder="Enter command"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandBar 2`] = `
<DocumentFragment>
  <div
    class="command"
  >
    <div
      class="command-title"
    >
      Command Result
    </div>
    <div
      class="command-result"
    />
    <div
      class="argument-suggestion popover top"
    >
      <div
        class="arrow"
      />
      <div
        class="popover-content"
      >
        <div>
          <strong>
            Available Commands: 
          </strong>
          <p
            class="available-commands"
          >
            ["flow.decode","flow.encode"]
          </p>
        </div>
      </div>
    </div>
    <div
      class="command-input input-group"
    >
      <span
        class="input-group-addon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-terminal icon icon-terminal"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19h8"
          />
          <path
            d="m4 17 6-6-6-6"
          />
        </svg>
      </span>
      <input
        class="input"
        placeholder="Enter command"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
